--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link active" href="/#/">Home <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link" href="/#/add">Ajouter</a>
-              <a class="nav-item nav-link" href="/#/manage">Manage</a>
+              <a class="nav-item nav-link" href="/#/edit">Edit</a>
               <a class="nav-item nav-link disabled" href="#">Disabled</a>
             </div>
           </div>
